--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,4 @@
+ /*formulario */
 body{
 align-items: center;
 padding-top: 200px;
@@ -35,4 +36,427 @@ background-repeat: no-repeat;
 .fav{
 color: white;
 text-shadow: 2px black;
+}
+
+ /* inicio */
+
+@font-face {
+    font-family: Calp;
+    src: url(fonts/CalpsSans-SemiLight.ttf);
+}
+
+@font-face {
+ font-family: Cooper;
+ src: url(fonts/CooperHewitt-Book.otf);
+}
+
+
+@media only screen and (max-width: 800px) {
+    
+#logo{
+ height: 150px;
+
+}
+
+.container{
+ width: 105%;
+ display: flex;
+ justify-content: center;
+ margin-left: -8;
+ margin-top: 6vh;
+ flex-direction: column;
+ padding: 0;
+
+}
+
+.area{
+ margin: 0 auto;
+ margin-top: 5vh;
+ width: 100%;
+ text-align: center;
+ background-color:#fdfdfd ;
+ height: 7vh;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+font-size: 180%;
+ font-family: Calp;
+ box-shadow: inset 0 0 5px gray;
+
+}
+
+.container img{
+ width: 35%;
+ height: auto;
+ margin: 0 auto;
+
+}
+
+#divBusca{
+ background-color:white;
+ border:solid 1px gray;
+ border-radius:5px;
+ width:300px;
+ margin: 0 auto;
+ margin-top: 2vh;
+ padding: 3;
+}
+
+#divbusca img{
+height: 30px;
+width: auto;
+}
+
+#txtBusca{
+ float:left;
+ background-color:transparent;
+ padding-left:5px;
+ font-size:18px;
+ border:none;
+ height:32px;
+ width:260px;
+}
+
+.container img {
+ width: 35%;
+ height: auto;
+ margin: 0 auto;
+}
+.table{
+ width: 100%;
+}
+.refletir{
+ transform: rotateX(180deg);
+}
+
+thead{
+ visibility:hidden;
+}
+
+.table td{
+ background-color:white;
+ border: solid 1px;
+ border-radius: 3px;
+ text-align: center;
+ font-family: Cooper;
+ font-size: 14px;
+ min-width: 30px;
+}
+
+.informacoes{ transition: min-height .5s ease-out, max-height .5s ease-in, opacity .5s;;  
+ opacity: 0; 
+ height: 0;
+ overflow: hidden;
+ max-height: 0;
+ min-height: 0;
+ 
+}
+
+.active{
+     
+     max-height:30vh;
+     min-height: 10vh;
+ height: auto;
+ opacity: 1;
+ }
+.conteudo{
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+ height:100%;
+}
+
+.corpo{
+ display:flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+
+}
+.produtos{
+ background-color: #f5f5f5;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ height: 60px;
+ width: 60%;
+ font-family:monospace;
+ font-size: 140%;
+ 
+
+}
+
+.produtos a{
+ color:black;
+ text-decoration: none;
+ 
+}
+
+
+.vendas{
+ background-color: #16863a;
+ color:white;
+ display: flex;
+ height: 50px;
+ width: 104%;
+ margin-left: -7px;
+ margin-right: -7px;
+ justify-content: center;
+ align-items: center;
+
+}
+
+
+
+h2{
+ margin:0;
+}
+.logo img{
+ display: block;
+ margin-left: auto;
+ margin-right: auto;
+}
+
+.conteudo input{
+
+ display: block;
+ width: 100%;
+ padding: .375rem .75rem;
+ font-size: 1rem;
+ font-weight: 400;
+ line-height: 1.5;
+ color: #212529;
+ background-color: #fff;
+ background-clip: padding-box;
+ border: 1px solid #ced4da;
+ -webkit-appearance: none;
+ -moz-appearance: none;
+ appearance: none;
+ border-radius: .25rem;
+ transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+
+}
+h2{
+ font-size: 25px;
+ font-family:monospace;
+ 
+}
+
+label{
+ font-size: 17;
+ font-style: monospace;
+}
+
+.botoes button{
+ background-color: #002b0e;
+ color: white;
+font-size: 18;
+ border-radius: 2px;
+ border:none;
+ padding: 5px;
+}
+
+.botoes{
+ display: flex;
+ justify-content: space-around;
+ align-items: center;
+ height:5vh;
+}
+
+.conteudo button{
+ margin-top: 10px;
+ border:#16863a solid 1px;
+ background-color: #faf60c;
+ font-size: 15;
+ border-radius: 4px;
+ padding: 5px;
+ width: 100px;
+ font-style: monospace;
+}
+
+main{
+ border: solid 2px;
+ padding: 15px;
+ border-radius: 8px;
+ background-color: white;
+ margin-left: 30px;
+ margin-right: 30px;
+ margin-top: 20px;
+}
+body{
+ background-color: #e1ede5;
+ justify-content:center;
+
+}
+}
+
+/*PC*/
+@media only screen and (min-width: 801px) {
+
+.vendas{
+ background-color: #16863a;
+ color:white;
+ display: flex;
+ height: 50px;
+ margin-left: -7px;
+ margin-right: -7px;
+ justify-content: center;
+ align-items: center;
+
+
+}
+.container{
+ width: 105%;
+ display: flex;
+ justify-content: center;
+ margin-left: -8;
+ margin-top: 6vh;
+ flex-direction: column;
+ padding: 0;
+
+}
+
+.table{
+ width: 100%;
+}
+.refletir{
+ transform: rotateX(180deg);
+}
+
+thead{
+ visibility:hidden;
+}
+
+.table td{
+ background-color:white;
+ border: solid 1px;
+ border-radius: 3px;
+ text-align: center;
+ font-family: Cooper;
+ font-size: 20px;
+ min-width: 30px;
+}
+
+
+.active{
+      
+     max-height:30vh;
+     min-height:12vh;
+ height: auto;
+ opacity: 1;
+ }
+.conteudo{
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+ height:100%;
+}
+table{
+ max-width: 80%;
+ margin: 0 auto;
+}
+
+.area{
+ margin: 0 auto;
+ margin-top: 5vh;
+ width: 100%;
+ text-align: center;
+ background-color:#fdfdfd ;
+ height: 10vh;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+font-size: 250%;
+ font-family: Calp;
+ box-shadow: inset 0 0 5px gray;
+
+}
+
+.produtos a{
+ color:black;
+ text-decoration: none;
+ 
+}
+.conteudo button{
+ margin-top: 10px;
+ border:#16863a solid 1px;
+ background-color: #faf60c;
+ font-size: 15;
+ border-radius: 4px;
+ padding: 5px;
+ width: 100px;
+ font-style: monospace;
+}
+
+input{
+
+ padding: .375rem .75rem;
+ color: #212529;
+ background-color: #fff;
+ background-clip: padding-box;
+}
+
+label{
+ font-size: 17;
+}
+
+button{
+ margin-top: 10px;
+ border:#16863a solid 1px;
+ background-color: #faf60c;
+ font-size: 15;
+ border-radius: 4px;
+ padding: 5px;
+ width: 100px;
+ font-style: monospace;
+}
+
+main{
+ border: solid 2px;
+ padding: 15px;
+ border-radius: 20px;
+ background-color: white;
+ margin-left: auto;
+ margin-right: auto;
+ margin-top: 20px;
+ max-width:35%;
+}
+
+.produtos{
+ background-color: #f5f5f5;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ height: 60px;
+ width: 60%;
+ font-family:monospace;
+ font-size: 170%;
+}
+
+.vendas{
+ background-color: #16863a;
+ color:white;
+ display: flex;
+width: 80%;
+ height: 50px;
+ justify-content: center;
+ align-items: center;
+
+}
+.botoes button{
+ background-color: #002b0e;
+ color: white;
+font-size: 100%;
+ border-radius: 2px;
+ border:none;
+ padding: 5px;
+}
+.botoes{
+ display: flex;
+ justify-content:space-evenly;
+ align-items: center;
+ height:5vh;
+}
 }
